2008-10-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/kl.spad.pamphlet: Use binary search in
	SortedCache.

2008-10-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/patches.lisp, src/interp/util.lisp: Supress
	sbcl style warnings due to autoloading.

2008-10-02  Martin Rubey  <martin.rubey@univie.ac.at>

	* contrib/emacs/efricas, contrib/emacs/fricas.el: make emacs mode
	work with ecl - suppress banner.

2008-10-01  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/algfunc.spad.pamphlet,
	src/algebra/combfunc.spad.pamphlet,
	src/algebra/constant.spad.pamphlet,
	src/algebra/efstruc.spad.pamphlet,
	src/algebra/elemntry.spad.pamphlet,
	src/algebra/expr.spad.pamphlet,
	src/algebra/fspace.spad.pamphlet,
	src/algebra/intef.spad.pamphlet,
	src/algebra/integrat.spad.pamphlet,
	src/algebra/kl.spad.pamphlet,
	src/algebra/laplace.spad.pamphlet,
	src/algebra/limitps.spad.pamphlet,
	src/algebra/liouv.spad.pamphlet,
	src/algebra/manip.spad.pamphlet,
	src/algebra/odeef.spad.pamphlet,
	src/algebra/oderf.spad.pamphlet,
	src/algebra/opalg.spad.pamphlet,
	src/algebra/op.spad.pamphlet,
	src/algebra/pfo.spad.pamphlet,
	src/algebra/rdeef.spad.pamphlet,
	src/algebra/rec.spad.pamphlet:  Use symbols for names
	of operator properties.

2008-09-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/algfunc.spad.pamphlet,
	src/algebra/fspace.spad.pamphlet:  Fix issue 23.
	src/input/bugs2008.input.pamphlet:  Add test.

2008-09-26  Martin Rubey  <martin.rubey@univie.ac.at>

	* INSTALL.CYGWIN, contrib/emacs/efricas, contrib/emacs/fricas.el:
	adapt install notes for cygwin, send errors when running in emacs
	to /dev/null.

2008-09-26  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* configure.ac: Use new macros FRICAS_CHECK_PROG
	and FRICAS_CHECK_PROGS for better error checking.

2008-09-25  Bill Page <bill.page@newsynthesis.org>
            Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/interp/i-coerce.boot:  Improve coercion of
	types.