@@ -127,6 +127,17 @@ testEquals("parse(str)$InputForm", "pretendOfType(if1)$iP")
 -- Issue 23
 testcase "exp^log(x)"
 testEquals("exp^(2*log(x)) - (exp^log(x))^2", "0")
+
+--
+testcase "MAP is undefined"
+
+R:= UP('t, INT)
+delta(x:R):R == D(x)
+W:= OREUP('x, R, 1, delta)
+x: W := 'x
+t: W:= 't
+testEquals("x*t", "t*x+1")
+
 )set output algebra on
 statistics()
 @
