@@ -1,5 +1,9 @@
 2008-10-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/patches.lisp: Add back definition of MAP.
+ 
+2008-10-03  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/kl.spad.pamphlet: Use binary search in
 	SortedCache.
 
